# lynsedb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTO_OPTIMIZATION_SUMMARY.md  Cargo.toml  Dockerfile  MANIFEST.in  MinVecDB-Demo.ipynb  README.md  SIMSIMD_INTEGRATION_SUMMARY.md  benchmark_rust_vs_python.py  comprehensive_benchmark.py  comprehensive_benchmark_results.json  comprehensive_index_test.py  db_src.py  index-template.html  mkdocs.yml  model.py  optimize_engines.py  output_file.voy  pyproject.toml  requirements.txt  setup.py  simsimd_performance_results.txt  test_bench.py  test_bench2.py  test_bench_index.py  test_diag.py  test_local_mode.py  test_query_perf.py  test_recall.py  test_refactor.py  test_simsimd_performance.py  verify_optimized_engines.py  versions.json
.cargo/: config.toml
.github/workflows/: doc-ci.yml  docker-tests.yml  python-package.yml  python-tests.yml
0.1.4/: 404.html  index.html  objects.inv  sitemap.xml
0.1.4/FieldExpression/: index.html
0.1.4/client/: index.html
0.1.4/quickstart/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html  sitemap.xml
0.1.5/FieldExpression/: index.html
0.1.5/client/: index.html
0.1.5/quickstart/: index.html
0.1.6/: 404.html  index.html  sitemap.xml
0.1.6/FieldExpression/: index.html
0.1.6/client/: index.html
0.1.6/quickstart/: index.html
0.1.6/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/FieldExpression/: index.html
0.2.0/client/: index.html
0.2.0/production_roadmap/: index.html
0.2.0/quickstart/: index.html
0.2.0/result_view/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/client/: index.html
0.3.0/production_roadmap/: index.html
0.3.0/quickstart/: index.html
0.3.0/result_view/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/client/: index.html
0.4.0/production_roadmap/: index.html
0.4.0/quickstart/: index.html
0.4.0/releases/: index.html
0.4.0/result_view/: index.html
0.4.0/search/: search_index.json
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/client/: index.html
0.5.0/production_roadmap/: index.html
0.5.0/quickstart/: index.html
0.5.0/releases/: index.html
0.5.0/result_view/: index.html
0.5.0/search/: search_index.json
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/client/: index.html
0.6.0/production_roadmap/: index.html
0.6.0/quickstart/: index.html
0.6.0/releases/: index.html
0.6.0/result_view/: index.html
0.6.0/search/: search_index.json
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0/client/: index.html
0.7.0/quickstart/: index.html
0.7.0/releases/: index.html
0.7.0/result_view/: index.html
0.7.0/search/: search_index.json
0.7.1/: 404.html  index.html  sitemap.xml
0.7.1/client/: index.html
0.7.1/quickstart/: index.html
0.7.1/releases/: index.html
0.7.1/result_view/: index.html
0.7.1/search/: search_index.json
benchmarks/: cluster_perf_bench.py  filtered_search_bench.py  flat_mmap_1m.py  flat_search_bench.py  ivf_flat_1m.py  ivf_flat_bench.py  ivf_kmeans_baseline.py  kmeans_compare.py  rust_vs_python.py  sift1m_bench.py  upsert_bench.py
benchmarks/chroma_lancedb_qdrant_lynsedb/: README.md  bench.py  requirements.txt
benchmarks/polarvec_bench/: Cargo.toml
cvg/: __init__.py
cvg/api/: __init__.py
cvg/configs/: config.py
cvg/core_components/: kmeans.py  (+5 more)
docs/: FieldExpression.md  client.md  index.md  production_roadmap.md  quickstart.md  releases.md  result_view.md
latest/: 404.html  index.html  sitemap.xml
lynse/: __init__.py  _rust_backend.py  logger.py
min_vec/: __init__.py  api.py  benchmark.py  binary_matrix_serializer.py  config.py  engine.py  engines.py  fields_mapper.py  filter.py  ivf_index.py  kmeans.py  matrix_serializer.py  model.py  query.py  scaler.py  session.py  storage.py  utils.py
rust/: Cargo.toml
rust/lynse-core/: Cargo.toml  pyproject.toml
rust/lynse-core/src/: engine.rs  error.rs  lib.rs
rust/lynse-core/src/distance/: mod.rs  simd.rs
rust/lynse-core/src/index/: flat.rs  mod.rs
rust/lynse-core/src/python/: mod.rs
rust/lynse-core/src/storage/: bitset.rs  field_store.rs  flat_mmap.rs  ivf_flat_mmap.rs  mod.rs  vector_store.rs  wal.rs
scripts/: bench_approx_search.py  bench_lynse_query.py  bench_public_api_matrix.py  bench_remote_rust_http.py  bench_transport.py
src/: cluster.rs  engine.rs  error.rs  lib.rs  rpc.rs
src/apexbase/: Cargo.toml  lib.rs
src/apexbase/data/: arrow_convert.rs  mod.rs  row.rs  types.rs  value.rs
src/apexbase/embedded/: mod.rs
src/apexbase/fts/: mod.rs
src/apexbase/python/: bindings.rs  mod.rs
src/apexbase/query/: expr_compiler.rs  filter.rs  jit.rs  mod.rs  multi_column.rs  planner.rs  query_signature.rs  scheduler.rs  simd_take.rs  sql_parser.rs  vector_ops.rs  vectorized.rs  vectorized_join.rs
src/apexbase/query/executor/: aggregation.rs  ddl.rs  dml.rs  expressions.rs  joins.rs  mod.rs  select.rs  tests.rs  window.rs
src/apexbase/scaling/: mod.rs  node.rs  partition.rs  router.rs  shard.rs
src/apexbase/storage/: backend.rs  bloom.rs  concurrent.rs  engine.rs  incremental.rs  mod.rs
src/apexbase/storage/delta/: merge.rs  mod.rs  update_log.rs
src/apexbase/storage/index/: btree.rs  hash_index.rs  index_manager.rs  mod.rs
src/apexbase/storage/mvcc/: gc.rs  mod.rs  snapshot.rs  version_store.rs
src/apexbase/storage/on_demand/: agg_wal.rs  arrow_io.rs  header.rs  mmap_scan.rs  mod.rs  read_write.rs  storage_core.rs  tests.rs  types.rs
src/apexbase/table/: arrow_column.rs  catalog.rs  column_table.rs  mod.rs  schema.rs
src/apexbase/txn/: conflict.rs  context.rs  manager.rs  mod.rs
test/: __init__.py  comprehensive_index_test.py  databases.json  test_hmvdb_initial.py  test_http_api.py  test_initial.py  test_model.py
tests/: __init__.py  test_explicit_api_parameters.py  test_numpack_adapter.py
tutorials/: Benchmarks.ipynb  add_vectors.ipynb  collections.ipynb  databases.ipynb  distance.ipynb  index_mode.ipynb  queries.ipynb  test.ipynb
(+406 files in other folders)
