[package]
name = "lynse"
version = "0.4.0"
edition = "2021"
description = "High-performance vector database"
license = "Apache-2.0"

[lib]
name = "lynse"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.26", optional = true }
numpy = { version = "0.26", optional = true }

# Storage backends
apexbase = { version = "1.19.0", default-features = false }
arrow = { version = "57.3.0", features = ["ipc"] }


# Parallelism
rayon = "1.10"
crossbeam = "0.8"
parking_lot = "0.12"

# SIMD / distance (optional, used for fallback)
# simsimd = "6.5"  # TODO: enable when needed for specific benchmarks

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Random / hashing
rand = { version = "0.8", features = ["small_rng"] }
ahash = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP server
base64 = "0.22"
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
memmap2 = "0.9"
libc = "0.2"
num_cpus = "1"
half = "2"

[features]
default = []
avx512 = []
python = ["dep:pyo3", "dep:numpy"]
extension-module = ["python", "pyo3/extension-module"]


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
