[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LynseDB"
version = "0.2.0"
description = "A lightweight, server-optional, multi-end compatible, Rust-powered vector database deployable locally or remotely."
readme = "README.md"
keywords = ["vector", "database"]
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.9"

authors = [
    {name = "Birch Kwok", email = "birchkwok@gmail.com"}
]

dependencies = [
    "numpy>=1.17.0",
    "spinesUtils>=0.4.1",
    "msgpack>=1.0.2",
    "flask>=2.0.1",
    "waitress>=2.0.0",
    "setuptools>=68.0.0",
    "httpx[socks]>=0.19.0",
    "ruamel.yaml>=0.18.6",
    "pandas>=1.5.2",
    "pyarrow>=10.0.0",
]

[project.urls]
homepage = "https://github.com/BirchKwok/LynseDB"


[tool.setuptools.packages.find]
include = ["lynse", "tutorials"]
exclude = ["logo"]

[project.scripts]
lynse = "lynse.api.http_api.http_api.app:main"
