[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "LynseDB"
version = "0.6.0"
description = "A Python-first, Rust-powered vector database for AI apps, from embedded local storage to HTTP service and lightweight sharded clusters."
readme = "README.md"
keywords = ["vector", "database"]
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.9"

authors = [
    {name = "Birch Kwok", email = "birchkwok@gmail.com"}
]

dependencies = [
    "numpy>=1.17.0",
]

[project.optional-dependencies]
embeddings = [
    "fastembed>=0.3.0",
]

[project.urls]
homepage = "https://github.com/BirchKwok/LynseDB"

[project.scripts]
lynse = "lynse.server:main"

[tool.maturin]
features = ["extension-module"]
module-name = "lynse._core"
python-source = "python"
