[package]
name = "lynse-core"
version = "0.2.0"
edition = "2021"
description = "High-performance Rust core for LynseDB vector database"
license = "Apache-2.0"

[lib]
name = "lynse_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# Storage backends
apexbase = { version = "1.11.0", default-features = false }

numpack = { version = "0.6.0", default-features = false, features = ["rayon"] }
ndarray = "0.16"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"
parking_lot = "0.12"

# SIMD / distance (optional, used for fallback)
# simsimd = "6.5"  # TODO: enable when needed for specific benchmarks

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Random / hashing
rand = { version = "0.8", features = ["small_rng"] }
ahash = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[features]
default = []
avx512 = []
