[package]
name = "apexbase"
version = "1.14.0"
edition = "2021"
description = "Embedded ApexBase storage engine vendored for LynseDB"
license = "Apache-2.0"

[lib]
name = "apexbase"
path = "lib.rs"

[dependencies]
ahash = "0.8"
anyhow = "1"
arc-swap = "1"
arrow = { version = "57.3.0", features = ["ipc"] }
bincode = "1"
bloomfilter = "1"
byteorder = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
cranelift = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"
crc32fast = "1"
dashmap = "5"
env_logger = "0.11"
fast-float = "0.2"
fs2 = "0.4"
libc = "0.2"
log = "0.4"
lz4_flex = "0.11"
memchr = "2"
memmap2 = "0.9"
nanofts = "0.7"
once_cell = "1"
parking_lot = "0.12"
parquet = "57.3.0"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
target-lexicon = "0.13"
thiserror = "1"
zstd = "0.13"

[features]
default = []
